# qcfront

./: .gitignore  Cargo.toml  README.md  book.toml
.github/: copilot-instructions.md
.github/workflows/: CI.yml  docs.yml
crates/algos/: Cargo.toml
crates/algos/src/: grover.rs  lib.rs  math.rs  qpe.rs  qubit.rs  runner.rs  sat.rs  shor.rs  state.rs
crates/algos/src/circuits/: adder.rs  mod.rs  modmul_15.rs  multi_cx.rs  multi_cz.rs  transform.rs
crates/algos/src/grover/: index.rs  mod.rs  sat.rs  subset_sum.rs
crates/algos/src/sat/: mod.rs
crates/examples/: Cargo.toml
crates/examples/src/: azure_runner.rs  lib.rs  quest_runner.rs
crates/qoqo-example/: Cargo.toml
crates/qoqo-example/src/: main.rs
docs/: SUMMARY.md  introduction.md
docs/background/: DWave.md  LocalSimulators.md  MicrosoftQDK.md  QuilQVM.md  Ref.md
docs/background/algorithms/: RSAFactoring.md
docs/background/frameworks/: Cirq.md  LocalSimulators.md
docs/features/: AmplitudeEstimation.md  CircuitUtilities.md  GroverSearch.md  MissingFeatures.md  QubitTypeSafety.md  StatePreparation.md
docs/theory/: Gates.md  Grover.md  bloch.html  bloch.md  gate-physics.md
notes/background/frameworks/: FrameworkComparison.md  Qiskit.md
notes/background/post-quantum/: QSSHAndQSSL.md
notes/background/rust-ecosystem/: Qnect.md  QuantRS2.md
notes/features/: AzureQuantum.md  MissingFeatures.md  QuantumRunner.md  ShorFactoring.md
