[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
roqoqo = "1"
roqoqo-quest = "0.18"
roqoqo-qir = "0.3"
qoqo_calculator = "1"
num-complex = "0.4"
num-integer = "0.1"
num-traits = "0.2"
serde_json = "1"
tempfile = "3"
rand = { version = "0.10", default-features = false, features = [
    "std",
    "thread_rng",
] }
