[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[dependencies]
algos = { path = "../algos" }
roqoqo.workspace = true
roqoqo-quest.workspace = true
roqoqo-qir.workspace = true
qoqo_calculator.workspace = true
serde_json.workspace = true
tempfile.workspace = true
rand.workspace = true
